[package]
name = "hashing-serializer"
version = "0.2.0-pre.0"
authors = ['Bogdan Opanchuk <bogdan@opanchuk.net>']
license = "MIT"
description = "Serialize serde-implementing structures directly into a hash"
repository = "https://github.com/fjarri/hashing-serializer"
readme = "README.md"
categories = ["no-std"]
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false }
digest = { version = "0.11.0-pre.9", default-features = false }

[dev-dependencies]
sha2 = "0.11.0-pre.3"
k256 = {git = "https://github.com/RustCrypto/elliptic-curves", features = ["serde", "pem"]}
rand_core = "0.6"

[features]
default = []
alloc = ["serde/alloc"]
